# IDS721-individual-project-4

./: Cargo.toml  Makefile  README.md  output.json  output_chessboard.py
src/: lib.rs  main.rs
