[package]
name = "project4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.0"
lambda_http = "0.8.0" # AWS Lambda Runtime
tokio = "1.21.2" # for async networking
serde = { version = "1.0.147", features = ["derive"] } # for JSON serialization
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
rand = "0.8.5"
itertools = "0.10.0"
lazy_static = "1.4.0"